// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getProductAnalytic data returns bingo product analytic data 1`] = `
Object {
  "productBrand": Array [
    "",
    "",
    "",
    "apple",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "vodafone",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "apple",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "64gb",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "sim card",
    "ehandset",
    "bundle",
    "discount",
    "sim card",
    "bundle",
    "extender product",
    "sim card",
    "accessories",
    "data_device",
    "fixed broadband equipment 2019",
    "super wi-fi",
    "always connected bundle",
    "bundle",
    "discount",
    "sim card",
    "discount",
    "handset",
    "bundle",
  ],
  "productColour": Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "gold",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "11",
    "0",
    "0",
    "55",
    "0",
    "0",
    "26",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "42",
    "0",
    "0",
    "0",
    "0",
    "27",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "9.17",
    "0",
    "0",
    "45.83",
    "0",
    "0",
    "21.67",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "35",
    "0",
    "0",
    "0",
    "0",
    "22.50",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
    "29",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "8.00",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
    "24.17",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "6.33",
    "0",
  ],
  "productId": Array [
    "086532",
    "114361",
    "086532",
    "212492",
    "113362",
    "107389",
    "086532",
    "113243",
    "206929",
    "086532",
    "201438",
    "209128",
    "206680",
    "111997",
    "112785",
    "112759",
    "111116",
    "086532",
    "110135",
    "209112",
    "112681",
  ],
  "productModel": Array [
    "",
    "",
    "",
    "iphone-12",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "k5161-dongle",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "iphone-8",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "12mth data simo plan 4gb",
    "blank white triple format sim",
    "apple iphone 12 64gb purple",
    "24month band c 100gb red plan",
    "yours for a great price",
    "blank white triple format sim",
    "24month sim only unlimited plan",
    "super wifi booster",
    "blank white triple format sim",
    "apple tv 32gb",
    "vodafone 4g dongle",
    "vodafone wi-fi hub",
    "super wi-fi product",
    "broadband back up 50gb data bundle",
    "pro superfast 2 xtra",
    "vodafone together £3 discount",
    "blank white triple format sim",
    "vodafone household 15% discount",
    "new bingo 2",
    "bingo test b silver 24 month unlimited",
  ],
  "productPackageId": Array [
    "a5d2dfea-bec1-4ab8-82be-c99e3aefc2fe",
    "a5d2dfea-bec1-4ab8-82be-c99e3aefc2fe",
    "b2b5bfd3-7137-4a10-99d4-eaeb0cd96cea",
    "b2b5bfd3-7137-4a10-99d4-eaeb0cd96cea",
    "b2b5bfd3-7137-4a10-99d4-eaeb0cd96cea",
    "b2b5bfd3-7137-4a10-99d4-eaeb0cd96cea",
    "43650589-9efe-4109-ac1e-73903c49aed0",
    "43650589-9efe-4109-ac1e-73903c49aed0",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "d6211217-262f-42ea-8f81-d9f1739cc1df",
    "be93962c-7744-48a4-b249-23b90667a9d1",
    "be93962c-7744-48a4-b249-23b90667a9d1",
    "be93962c-7744-48a4-b249-23b90667a9d1",
    "be93962c-7744-48a4-b249-23b90667a9d1",
  ],
  "productPackageName": Array [
    "12mth data simo plan 4gb",
    "12mth data simo plan 4gb",
    "24month band c 100gb red plan",
    "24month band c 100gb red plan",
    "24month band c 100gb red plan",
    "24month band c 100gb red plan",
    "24month sim only unlimited plan",
    "24month sim only unlimited plan",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "pro superfast 2 xtra",
    "bingo test b silver 24 month unlimited",
    "bingo test b silver 24 month unlimited",
    "bingo test b silver 24 month unlimited",
    "bingo test b silver 24 month unlimited",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "12",
    "",
    "",
    "24",
    "",
    "",
    "24",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "24",
    "",
    "",
    "",
    "24",
    "24",
  ],
  "productPlanData": Array [
    "",
    "4",
    "",
    "",
    "200",
    "",
    "",
    "unlimited",
    "",
    "",
    "",
    "",
    "",
    "",
    "50",
    "",
    "",
    "",
    "",
    "",
    "unlimited",
  ],
  "productPlanMinutes": Array [
    "",
    "",
    "",
    "",
    "unlimited",
    "",
    "",
    "unlimited",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "unlimited",
  ],
  "productPlanSms": Array [
    "",
    "",
    "",
    "",
    "unlimited",
    "",
    "",
    "unlimited",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "",
    "unlimited",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
    "29",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "10.00",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
    "24.17",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "8.33",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "11",
    "0",
    "0",
    "59",
    "0",
    "0",
    "26",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "45",
    "0",
    "0",
    "0",
    "1.67",
    "27",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "9.17",
    "0",
    "0",
    "49.17",
    "0",
    "0",
    "21.67",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "0",
    "37.50",
    "0",
    "0",
    "0",
    "1.39",
    "22.50",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;

exports[`getProductAnalytic data returns simo product analytic data 1`] = `
Object {
  "productBrand": Array [
    "",
    "",
    "",
  ],
  "productCapacity": Array [
    "",
    "",
    "",
  ],
  "productCategory": Array [
    "sim card",
    "bundle",
    "discount",
  ],
  "productColour": Array [
    "",
    "",
    "",
  ],
  "productDiscountRecurrenceAmount": Array [
    "0",
    "15",
    "0",
  ],
  "productDiscountRecurrenceAmountNet": Array [
    "0",
    "12.50",
    "0",
  ],
  "productDiscountValue": Array [
    "0",
    "0",
    "0",
  ],
  "productDiscountValueNet": Array [
    "0",
    "0",
    "0",
  ],
  "productId": Array [
    "086532",
    "112168",
    "109989",
  ],
  "productModel": Array [
    "",
    "",
    "",
  ],
  "productName": Array [
    "blank white triple format sim",
    "24m sim only unlimited max plan",
    "simo limited time discount for 6 months ",
  ],
  "productPackageId": Array [
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
    "3023bbbd-5552-4c6f-8283-0a5b267a3d3c",
  ],
  "productPackageName": Array [
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
    "24m sim only unlimited max plan",
  ],
  "productPackageNetworkSwitchType": Array [
    "",
    "",
    "",
  ],
  "productPackagePlanDuration": Array [
    "",
    "24",
    "",
  ],
  "productPlanData": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanMinutes": Array [
    "",
    "unlimited",
    "",
  ],
  "productPlanSms": Array [
    "",
    "unlimited",
    "",
  ],
  "productPrice": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceNet": Array [
    "0",
    "0",
    "0",
  ],
  "productPriceRecurrenceAmount": Array [
    "0",
    "30",
    "0",
  ],
  "productPriceRecurrenceAmountNet": Array [
    "0",
    "25",
    "0",
  ],
  "productQuantity": Array [
    "1",
    "1",
    "1",
  ],
  "quoteId": Array [],
  "tradeInAmount": Array [],
  "tradeInDevice": Array [],
  "tradeInDuration": Array [],
  "tradeInType": Array [],
  "transactionCouponCode": undefined,
}
`;
